# ictIITK-AI

./: .gitignore  LICENSE  readme.org
code/: .envrc  overallCode.org  pyproject.toml
code/ML_Data/: ._Titanic Project (Machine Learning).docx
code/mlaipack01/: MLAIPractical01.py  MLAIPractical02.py  MLAIPractical03.py  MLAIPractical04.py  MLAIPractical05.py  MLAIPractical06.py  MLAIPractical07.py  MLAIPractical08.py
