[tool.poetry]
name = "ictAI"
version = "0.1.0"
description = "Random code for ict-iitk AI summer classes"
authors = ["Rohit Goswami"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.9.0"
pandas = "^0.24.2"
matplotlib = "^3.1"
numpy = "^1.16"
scipy = "^1.3"
sklearn = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
